<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/masterFragment">

    <fragment
        android:id="@+id/failedFragment"
        android:name="com.example.calculate.FailedFragment"
        android:label="@string/nav_fail"
        tools:layout="@layout/fragment_failed">
        <action
            android:id="@+id/action_failedFragment_to_masterFragment"
            app:destination="@id/masterFragment" />
    </fragment>
    <fragment
        android:id="@+id/questionFragment"
        android:name="com.example.calculate.QuestionFragment"
        android:label="@string/nav_Test"
        tools:layout="@layout/fragment_question">
        <action
            android:id="@+id/action_questionFragment_to_failedFragment"
            app:destination="@id/failedFragment" />
        <action
            android:id="@+id/action_questionFragment_to_winFragment"
            app:destination="@id/winFragment" />
    </fragment>
    <fragment
        android:id="@+id/winFragment"
        android:name="com.example.calculate.WinFragment"
        android:label="@string/nav_Win"
        tools:layout="@layout/fragment_win">
        <action
            android:id="@+id/action_winFragment_to_masterFragment"
            app:destination="@id/masterFragment" />
    </fragment>
    <fragment
        android:id="@+id/masterFragment"
        android:name="com.example.calculate.MasterFragment"
        android:label="@string/app_name"
        tools:layout="@layout/master_fragment">
        <action
            android:id="@+id/action_masterFragment_to_questionFragment"
            app:destination="@id/questionFragment" />
    </fragment>
</navigation>